# mctlcli

./: Cargo.toml
src/: main.rs  types.rs
src/routes/: mod.rs
src/routes/datapacks/: add.rs  update.rs
