[package]
name = "mctlcli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.23"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
toml = "0.8.8"
home = "0.5.9"
color-print = "0.3.5"
